--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 server.port 9191
+
+spring.datasource.driver:com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/orb-score
+spring.datasource.username:root
+spring.datasource.password:root
+
+hibernate.show_sql=true
+hibernate.use_sql_comments=true
+hibernate.format_sql=true
+
